# boaServer

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: Dockerfile  README.md
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py
backend/app/llm/: __init__.py  gemini.py  prompts.py
backend/app/mcp/: __init__.py
backend/app/utils/: __init__.py  ticket_parser.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_plan.md  test_ticket_parser.py
config/: config.json
docs/design/: mvp_technical_design.md
docs/diagrams/: interaction_flow.md
src/core/: app.js  config.js  logger.js
src/impact/: evaluator.js
src/troubleshooting/: troubleshooter.js
